--- a/MyChatApp/app/src/main/res/values/colors.xml
+++ b/MyChatApp/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#4FA881</color>
+    <color name="colorAccent">#4fa881</color>
     <color name="colorIndivateTab">#FFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="colorCardView">#F7F7F7</color>
