--- a/MyChatApp/app/src/main/res/values/styles.xml
+++ b/MyChatApp/app/src/main/res/values/styles.xml
@@ -8,4 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="welcome_message_style">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold|italic</item>
+    </style>
+
+    <style name="button_accounts_style">
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">@color/grey_100</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
