--- a/MyChatApp/app/src/main/res/layout/activity_status.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_status.xml
@@ -4,6 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.StatusActivity">
+    tools:context=".activities.StatusActivity"
+    android:background="@drawable/bg">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:cardCornerRadius="20dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/colorAccent">
+
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:paddingEnd="30dp"
+                android:paddingStart="50dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="Enter your status"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginEnd="50dp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="19sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+
+                <EditText
+                    android:id="@+id/status_update_edit_text_id"
+                    android:ems="10"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/selector_bg_edit_2"
+                    android:textSize="15sp"
+                    android:textColor="@color/text_white"
+                    android:hint="Status..."
+                    android:inputType="textPersonName"
+                    android:layout_width="300dp"
+                    android:layout_height="44dp" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/status_update_button_id"
+                    android:layout_width="160dp"
+                    android:layout_height="45dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:text="Update Status"
+                    android:textColor="@color/text_button_color"
+                    android:background="@drawable/bt_shape"
+                    android:stateListAnimator="@drawable/state_list_animator_z"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
