--- a/MyChatApp/app/src/main/res/layout/activity_chat.xml
+++ b/MyChatApp/app/src/main/res/layout/activity_chat.xml
@@ -1,9 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey"
     tools:context=".activities.ChatActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/message_recycler_view_id"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_alignParentStart="true"
+        android:layout_above="@id/linear_layout_id"/>
+
+    <LinearLayout
+        android:id="@+id/linear_layout_id"
+        android:layout_alignParentBottom="true"
+        android:weightSum="10"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/grey_100"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/addMessageImageViewId"
+            android:layout_weight="1"
+            android:background="@drawable/ic_add_black_24dp"
+            android:layout_gravity="bottom"
+            android:layout_width="55dp"
+            android:layout_height="48dp" />
+
+        <EditText
+            android:id="@+id/messageEdt"
+            android:layout_weight="8"
+            android:padding="10dp"
+            android:textSize="15sp"
+            android:layout_gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="44dp" />
+
+        <Button
+            android:id="@+id/sendButton"
+            android:layout_width="48dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_send_black_24dp"
+            android:layout_gravity="bottom"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+</RelativeLayout>
