--- a/MyChatApp/app/src/main/res/values/colors.xml
+++ b/MyChatApp/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="white">#FFFFFF</color>
     <color name="text_white">#F0F7F4</color>
     <color name="text_button_color">#D3D3D3</color>
+    <color name="grey">#CCCCCCCC</color>
 </resources>
