--- a/DevPortfolio/app/src/main/res/layout/activity_main.xml
+++ b/DevPortfolio/app/src/main/res/layout/activity_main.xml
@@ -69,13 +69,30 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal">
 
-            <TextView
+            <Button
+                android:id="@+id/get_in_touch_button_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/get_in_touch"
+                android:drawableBottom="@android:drawable/ic_menu_call"
+                android:background="@android:color/transparent"
+                android:textColor="@color/colorWebsiteTab"/>
+
+            <!--<TextView
                 android:id="@+id/get_in_touch_text_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableBottom="@android:drawable/ic_menu_call"
                 android:text="@string/get_in_touch"
                 android:textColor="@color/colorWebsiteTab" />
+
+            <ImageButton
+                android:id="@+id/get_in_touch_button_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/ic_menu_call"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/get_in_touch_text_id"
+                android:contentDescription="@string/little_phone_description_image" />-->
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
